2003-07-24  Martin Blom  <martin@blom.org>

	* Removed void.audio from default build, since it's just an
	example driver.

	* Changed TARGET in Makefiles to EXECUTABLE, since TARGET
	interferes with the AROS build environment. [Adam Chodorowski]

	* ahi.device: Most of the library function gates are now
	auto-generated.

	* Nuked files that are now auto-generated (FD and clib includes).

	* No separate SAS/C and Storm C files anymore. The proto and
	pragma files work for all compilers now.

	* The build process no longer uses fd2inline and fd2pragma. I
	switched to SFD files and sfdc instead.

	* emu10kx.audio: Don't build unless OpenPCI is found.

	* ahi.device: More embarrassing bugs fixed: Due to a type in the
	Makefile, the powerpc assembler optimized mixing routines were
	never included!!

2003-07-23  Martin Blom  <martin@blom.org>

	* ahi.device: The linear interpolation code was like totally
	fucked up when sounds were looping or joined. The test sine in the
	preferences program finally sounds ok at other frequencies than 48
	kHz.

	* AHI: "Play a test sound" now plays a 16 bit sample instead of 8
	bit, and it's always played at full volume.

2003-07-14  Martin Blom  <martin@blom.org>

	* Minor updates to the SFD files.

2003-07-13  Martin Blom  <martin@blom.org>

	* Added SFD files contributed by Steffen Haeuser to the developer
	archives.

	* Include/C/clib/ahi_(|sub_)protos.h: Added extern "C" if C++
	detected. [Steffen Haeuser]

2003-07-07  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.6.

	* The EMU10kx CAMD driver is now part of the m68k build.

2003-07-06  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.41.

	* ahi.device: Reworked the dynamic volume so that the master
	volume is scaled based on the number of device openers. Then, for
	each opener, each request is individually scaled based on the
	number of active requests. This way, different programs will not
	affect each other.
	
2003-07-05  Martin Blom  <martin@blom.org>
